--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
-    background-color: yellow;
+    background-color: rgb(171, 189, 171);
 };
+h2 {
+   text-align: center;
+   color: white;
+}
+
+.row {
+    border-style: double;}
+
+  
